improve performance / save memory by using Map.of(a,b) for small immutable Map instances.
reduce amount of new instantiations of AuthorizationService